--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -315,7 +315,7 @@
                                                             class="form-control wi-form-control" 
                                                             ng-options="item.id as item.datasetCurve for item in wiModal.leftLimit"
                                                             ng-change="wiModal.onChangeShading($index);
-                                                            wiModal.setShadingName(shading.idLeftLine, shading._index, false); shading.leftFixedValue = null; wiModal.validate(shading._index); wiModal.setFillDisplay(shading._index); wiModal.setLimit2(shading._index);" 
+                                                             shading.leftFixedValue = null; wiModal.validate(shading._index); wiModal.setFillDisplay(shading._index); wiModal.setLimit2(shading._index);wiModal.setShadingName(shading.idLeftLine, shading._index, true)" 
                                                             ng-disabled="!shading.idRightLine">
                                                         <!-- <option></option> -->
                                                         <!-- <option value="-1">Left</option>
@@ -327,7 +327,7 @@
                                                 <td>
                                                     <input type="number" ng-model="shading.leftFixedValue" 
                                                             class="form-control wi-form-control" id="fixedVal" 
-                                                            ng-change="wiModal.onChangeShading($index);wiModal.setShadingName(null, shading._index, false); shading.idLeftLine = -3"
+                                                            ng-change="wiModal.onChangeShading($index);wiModal.setShadingName(null, shading._index, true); shading.idLeftLine = -3"
                                                             ng-disabled="!shading.idRightLine"
                                                             size="6">
                                                 </td>
