update import las/multilas

--- a/source/dialogs/import-multi-LAS/import-multi-LAS-modal.html
+++ b/source/dialogs/import-multi-LAS/import-multi-LAS-modal.html
@@ -5,7 +5,7 @@
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
                 <h4>Load multi LAS files</h4>
             </div>
-            <div class="modal-body padding-0">
+            <div class="modal-body padding-0" style="height: 70%; overflow-y: overlay;">
                 <wi-tabset>
                     <wi-tab heading="Settings">
                         <div class="container-fluid">
