--- a/source/dialogs/import-LAS/import-LAS-modal.1.html
+++ b/source/dialogs/import-LAS/import-LAS-modal.1.html
@@ -26,12 +26,19 @@
                     <div class="row">
                         <h5>Well info</h5>
                         <div class="form-group">
-                            <label class="control-label col-sm-4 normal-text" for="selectWell">Select Well</label>
+                            <label class="control-label col-sm-4 normal-text" for="wellName">Import As New Well</label>
                             <div class="col-sm-8">
-                                <select name="selectWell" class="form-control wi-form-control"
+                                <input type="text" id="wellName" class="form-control wi-form-control" name="wellName" 
+                                ng-model="wiModal.wellName" ng-disabled="wiModal.selectedWell"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-4 normal-text" for="selectWell">Select Well Exist</label>
+                            <div class="col-sm-8">
+                                <select ng-disabled="wiModal.wellName" name="selectWell" class="form-control wi-form-control"
                                         ng-options="wellOption.name for wellOption in wiModal.projectLoaded.wells"
                                         ng-model="wiModal.selectedWell">
-                                    <option value=""></option>
+                                    <option value="">Well Name From LAS File</option>
                                 </select>
                             </div>
                         </div>
@@ -64,12 +71,19 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="control-label col-sm-4 normal-text" for="datasetName">Define new Dataset</label>
+                            <div class="col-sm-8">
+                                <input type="text" id="datasetName" class="form-control wi-form-control" name="datasetName" 
+                                ng-model="wiModal.datasetName" ng-disabled="wiModal.selectedDataset"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="control-label col-sm-4 normal-text" for="datasetName">Dataset Name</label>
                             <div class="col-sm-8">
-                                <select name="datasetName" class="form-control wi-form-control"
+                                <select ng-disabled="wiModal.datasetName" name="datasetName" class="form-control wi-form-control"
                                         ng-options="datasetOption.name for datasetOption in wiModal.selectedWell.datasets"
                                         ng-model="wiModal.selectedDataset">
-                                    <option value=""></option>
+                                    <option value="">Dataset Name From LAS File</option>
                                 </select>
                             </div>
                         </div>
