--- a/source/dialogs/regression-line/regression-line-modal.html
+++ b/source/dialogs/regression-line/regression-line-modal.html
@@ -84,9 +84,10 @@
                                         <td>
                                             <select ng-model="regLine.exclude"
                                                 class="form-control wi-form-control"
-                                                ng-change="wiModal.onChange(regLine.index)">
-                                                <option value="false">Include</option>
-                                                <option value="true">Exclude</option>
+                                                ng-change="wiModal.onChange(regLine.index)"
+                                                ng-options="(item?'Included':'Exclude') for item in [true, false]">
+                                                <!-- <option value="false">Include</option>
+                                                <option value="true">Exclude</option> -->
                                             </select>
                                         </td>
                                         <td>
