--- a/source/dialogs/new-project/new-project-modal.html
+++ b/source/dialogs/new-project/new-project-modal.html
@@ -25,21 +25,21 @@
                             <label class="control-label col-sm-3" for="company">Company</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" value="" id="company" name="company"
-                                       ng-model="company" ng-click="wiModal.error = null" required>
+                                       ng-model="company">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="department">Department:</label>
                             <div class="col-sm-9">
                                 <input type="text" class="form-control" value="" id="department" name="department"
-                                       ng-model="department" ng-click="wiModal.error = null" required>
+                                       ng-model="department">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-3" for="description">Description:</label>
                             <div class="col-sm-9">
                             <textarea class="form-control" rows="8" value="" id="description" name="description"
-                                      ng-model="description" ng-click="wiModal.error = null" required>
+                                      ng-model="description" style="resize:none">
                             </textarea>
                             </div>
                         </div>
