--- a/source/dialogs/import-LAS/import-LAS-modal.1.html
+++ b/source/dialogs/import-LAS/import-LAS-modal.1.html
@@ -29,13 +29,13 @@
                             <label class="control-label col-sm-4 normal-text" for="wellName">Import As New Well</label>
                             <div class="col-sm-8">
                                 <input type="text" id="wellName" class="form-control wi-form-control" name="wellName" 
-                                ng-model="wiModal.wellName" ng-disabled="wiModal.selectedWell"/>
+                                ng-model="wiModal.wellName" ng-change="wiModal.selectedWell=null"/>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-4 normal-text" for="selectWell">Select Well Exist</label>
                             <div class="col-sm-8">
-                                <select ng-disabled="wiModal.wellName" name="selectWell" class="form-control wi-form-control"
+                                <select ng-change="wiModal.wellName=null" name="selectWell" class="form-control wi-form-control"
                                         ng-options="wellOption.name for wellOption in wiModal.projectLoaded.wells"
                                         ng-model="wiModal.selectedWell">
                                     <option value="">Well Name From LAS File</option>
@@ -74,13 +74,13 @@
                             <label class="control-label col-sm-4 normal-text" for="datasetName">Define new Dataset</label>
                             <div class="col-sm-8">
                                 <input type="text" id="datasetName" class="form-control wi-form-control" name="datasetName" 
-                                ng-model="wiModal.datasetName" ng-disabled="wiModal.selectedDataset"/>
+                                ng-model="wiModal.datasetName" ng-change="wiModal.selectedDataset=null"/>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-4 normal-text" for="datasetName">Dataset Name</label>
                             <div class="col-sm-8">
-                                <select ng-disabled="wiModal.datasetName" name="datasetName" class="form-control wi-form-control"
+                                <select ng-change="wiModal.datasetName=null" name="datasetName" class="form-control wi-form-control"
                                         ng-options="datasetOption.name for datasetOption in wiModal.selectedWell.datasets"
                                         ng-model="wiModal.selectedDataset">
                                     <option value="">Dataset Name From LAS File</option>
