fixed shading && pointSet

--- a/source/dialogs/regression-line/regression-line-modal.html
+++ b/source/dialogs/regression-line/regression-line-modal.html
@@ -85,7 +85,7 @@
                                             <select ng-model="regLine.exclude"
                                                 class="form-control wi-form-control"
                                                 ng-change="wiModal.onChange(regLine.index)"
-                                                ng-options="(item?'Included':'Exclude') for item in [true, false]">
+                                                ng-options="(item?'Exclude':'Include') for item in [true, false]">
                                                 <!-- <option value="false">Include</option>
                                                 <option value="true">Exclude</option> -->
                                             </select>
