--- a/source/dialogs/prompt/prompt-modal.html
+++ b/source/dialogs/prompt/prompt-modal.html
@@ -1,4 +1,4 @@
-<div class='modal fade'>
+<div class='modal fade' >
 	<div class='modal-dialog'>
 		<div class="modal-content">
 			<div class="modal-header">
@@ -12,7 +12,7 @@
 						<div class="col-sm-9">
 							<input type="text" class="form-control"
 								ng-model="wiModal.input" ng-click="wiModal.error = null"
-								wi-enter="wiModal.close(wiModal.input)" required>
+								wi-enter="wiModal.close(wiModal.input)" required autofocus>
 						</div>
 					</div>
 				</form>
