--- a/source/dialogs/import-LAS/import-LAS-modal.1.html
+++ b/source/dialogs/import-LAS/import-LAS-modal.1.html
@@ -29,7 +29,7 @@
                             <label class="control-label col-sm-4 normal-text" for="wellName">Import As New Well</label>
                             <div class="col-sm-8">
                                 <input type="text" id="wellName" class="form-control wi-form-control" name="wellName" 
-                                ng-model="wiModal.wellName" ng-change="wiModal.selectedWell=null"/>
+                                ng-model="wiModal.wellName" ng-change="wiModal.selectedWell=null; wiModal.onWellNameChange()"/>
                             </div>
                         </div>
                         <div class="form-group">
@@ -90,11 +90,12 @@
                     </div>
 
                 </form>
+                <p class="dialog-error" ng-if="wiModal.error">Error: {{wiModal.error}}</p>               
             </div>
             <div class="modal-footer">
                 <button class='btn btn-default'
                         ng-disabled='!wiModal.lasFile || wiModal.isDisabled'
-                        ng-click='wiModal.onLoadButtonClicked()'><span class="ok-16x16"></span>&nbsp;Load</button>
+                        ng-click='wiModal.onLoadButtonClicked()' ng-disabled="wiModal.error"><span class="ok-16x16"></span>&nbsp;Load</button>
                 <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
